static/css/base.css
html {
  scroll-behavior: smooth;
  height: 100%;
}

body {
  margin: 0;
  padding: 0;
  font-size: 16px;
  background: url("/media/home.jpeg") no-repeat center center fixed;
  background-size: cover;
  font-family: "Lato", sans-serif;
  font-weight: 300;
}

a {
  color: #fff;
  font-weight: 300;
  font-size: 18px;
}

a:hover {
  color: #d3b3ac;
}

.header-background {
  position: static;
  display: block;
  overflow: visible;
  top: 0;
  max-height: auto;
  min-height: 85vh;
  white-space: normal;
  object-fit: fill;
  -o-object-fit: fill;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
}

.sticky-nav {
  position: sticky;
  position: -webkit-sticky;
  top: 0px;
  padding: 20px;
  z-index: 1;
  -webkit-align-self: auto;
  -ms-felx-item-align: auto;
  -ms-grid-row-align: auto;
  align-self: auto;
  -webkit-box-orient: 1;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  background-color: rgba(17, 66, 110, 0.9);
}

.navbar-toggler-icon {
  font-size: 50px;
}

.navbar-toggler {
  border: none;
  padding: 10px 6px;
  outline: none;
}

.navbar-toggler span {
  display: block;
  width: 40px;
  height: 3px;
  border: 2px;
  background: #fff;
}

.navbar-toggler span + span {
  margin-top: 8px;
  width: 40px;
}

.navbar-toggler span + span + span {
  width: 40px;
}

.navbar-expand-lg .navbar-nav .nav-link.active {
  color: #e74c3c;
}

.btn {
  background-color: #e74c3c;
  color: white;
  border-radius: 10px;
  font-size: 1.2rem;
  margin: 0px 0px 0px 0px;
}


.btn-apply {
  background-color: #5075af;
  color: white;
  border-radius: 10px;
  padding: 1rem 1.5rem;
  font-size: 1.0rem;
  height: 50%;
}

.btn-stay {
  background-color: green;
  color: white;
}

.btn:hover {
  background-color: #d3b3ac;
  border-color: #d3b3ac;
}

.btn-sorting {
  background-color: #e74c3c;
  color: white;
  border-radius: 10px;
  font-size: 1.2rem;
}

.sorting-row {
  margin-top: 20px;
  margin-bottom: 20px;
}

.sorting-column {
  margin-top: 10px;
  margin-bottom: 10px;
  background: #f4f4f4;
}

footer {
  background-color: rgba(17, 66, 110, 0.9);
  max-height: auto;
  min-height: 15vh;
  overflow: hidden;
}

.text-white-uppercase {
  text-transform: uppercase;
  color: whitesmoke;
}

.text-uppercase-blue {
  text-transform: uppercase;
  color: #11426e;
}

.logo-font {
  font-family: "Dancing Script", cursive;
  color: #ff7b7b;
  font-size: 50px;
}

.links {
  text-decoration: none;
}

.text-center {
  text-align: center;
  margin-top: 10px;
  margin-bottom: 10px;
}

.social-links {
  margin: 0 0px 0px 0;
  padding-bottom: 25px;
  font-size: 18px;
  text-align: center;
}

.social-links a {
  font-size: 18px;
  display: inline-block;
  background: #ff7b7b;
  color: #fff;
  line-height: 1;
  padding: 8px 0;
  margin-right: 4px;
  border-radius: 50%;
  text-align: center;
  width: 36px;
  height: 36px;
  transition: 0.3s;
  margin-top: 10px;
}

.social-links a:hover {
  background-color: #d3b3ac;
  border-color: #d3b3ac;
}

.copyright {
  color: whitesmoke;
  margin-left: 5px;
}

.btn-main-sections {
  margin-top: 15px;
  font-weight: bold;
  font-size: 16px;
  border-radius: 23px;
  width: 160px;
  background-color: #f05f40;
  border-color: #f05f40;
}

.btn-main-sections:hover,
.btn-main-sections:active,
.btn-main-sections:focus,
.btn-main-sections:active:focus:visited {
  background-color: #d3b3ac;
  border-color: #d3b3ac;
}

.btn-search {
  background-color: #f05f40;
}

.shopping-basket-icon {
  font-size: 20px;
  color: #f05f40;
  margin: 0px 0px 0px 0px;
}

.list-inline-item {
  margin-right: 20px;
}

.nav-bar-links {
  font-size: 30px;
  color: #f05f40;
}

.nav-bar-links:hover,
.nav-bar-links:active,
.nav-bar-links:focus .nav-bar-links:active:focus:visited {
  color: #d3b3ac;
}

/* Products page */
.overlay {
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  position: fixed;
  background: whitesmoke;
  z-index: -1;
}

/* Base html heading */

.heading {
  font-size: 3rem;
  font-weight: 300;
  line-height: 1.4;
  text-align: center;
  color: #11426e;
  margin-top: 30vh;
}

.vertical-alignment {
  display: flex;
  align-items: center;
  text-align: center;
}

.row {
  margin: 0px 0px 0px 0px;
  --bs-gutter-x: 0;
  --bs-gutter-y: 0;
  padding: 0px 0px 0px 0px;
}

.row-cart {
margin: 10px 0px 10px 0px;
}

.nav-link {
  font-size: 28px;
}

.link-confirmation {
  color: #000;
  decoration
}

.card {
  min-height: 400px;
  width: 100%;
  min-width: 100%;
  align-items: center;
}

.card-login {
  min-height: 400px;
  background-color: #f0ffff;
}

.card-logout {
  min-height: 100px;
  background-color: #f0ffff;
}

.col {
  margin: 0px 0px 0px 0px;
}

.main-form {
  width: 100%;
}

/* Login form */

.card0 {
  box-shadow: 0px 4px 8px 0px #f05f40;
  border-radius: 25px;
  width: 50%;
  margin-top: 10vh;
}

.card2 {
  margin: 0px 40px;
}

.logo {
  width: 200px;
  height: 100px;
  margin-top: 20px;
  margin-left: 35px;
}

.image {
  width: 360px;
  height: 280px;
}

.border-line {
  border-right: 1px solid #eeeeee;
}

.facebook {
  background-color: #3b5998;
  color: #fff;
  font-size: 18px;
  padding-top: 5px;
  border-radius: 50%;
  width: 35px;
  height: 35px;
  cursor: pointer;
}

.twitter {
  background-color: #1da1f2;
  color: #fff;
  font-size: 18px;
  padding-top: 5px;
  border-radius: 50%;
  width: 35px;
  height: 35px;
  cursor: pointer;
}

.linkedin {
  background-color: #2867b2;
  color: #fff;
  font-size: 18px;
  padding-top: 5px;
  border-radius: 50%;
  width: 35px;
  height: 35px;
  cursor: pointer;
}

.line {
  height: 1px;
  width: 45%;
  background-color: #e0e0e0;
  margin-top: 10px;
}

.or {
  width: 10%;
  font-weight: 300;
}

.text-sm {
  font-size: 14px !important;
}

::placeholder {
  color: #bdbdbd;
  opacity: 1;
  font-weight: 300;
}

:-ms-input-placeholder {
  color: #bdbdbd;
  font-weight: 300;
}

::-ms-input-placeholder {
  color: #bdbdbd;
  font-weight: 300;
}
/* ... */

